<resources>
    <string name="app_name">Skip!</string>
    <string name="journal_title">Journal</string>
    <string name="inbox_title">Send Message</string>
    <string name="action_settings">Settings</string>
    <string name="activity">Activity</string>
    <string name="start">Start!</string>
    <string name="completed">Completed</string>
    <string name="date">Date</string>
    <string name="complete_lessons">Complete lessons and get rewards!</string>
    <string name="lesson_1">Lesson 1:</string>
    <string name="activities_title">Activities</string>
    <string name="warm_up">Warm Up</string>
    <string name="crawl">Crawl</string>
    <string name="reach">Reach</string>
    <string name="one_min">1 min</string>
    <string name="five_min">5 min</string>
    <string name="rewards_title">Rewards</string>
    <string name="level_one">Level 1</string>
    <string name="level_two">Level 2</string>
    <string name="level_three">Level 3</string>
    <string name="level_four">Level 4</string>
    <string name="chapter_1">Chapter 1</string>
    <string name="chapter_2">Chapter 2</string>
    <string name="chapter_3">Chapter 3</string>
    <string name="chapter_4">Chapter 4</string>
    <string name="chapter_5">Chapter 5</string>
    <string name="chapter_6">Chapter 6</string>
    <string name="chapter_7">Chapter 7</string>
    <string name="chapter_8">Chapter 8</string>
    <string name="send_message">Send Message</string>
    <string name="to_email_address">To: Email Address</string>
    <string name="subject_line">Subject Line</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="start_cap">START</string>
</resources>
