<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/journal_title"
            android:textColor="@color/colorJournalGreen"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/complete_lessons"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:background="@color/colorJournalGreen" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/activity"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/start"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/completed"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="60dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/date"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/lesson_1"
                    android:textColor="@color/colorGrey"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/start_button"
                    android:layout_gravity="center_horizontal"
                    android:onClick="trackOne"
                    android:text="@string/start_cap" />

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/date"
                    android:layout_gravity="center_horizontal"
                    android:text="Placeholder" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/journal"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="20dp"
            android:clickable="true"
            android:onClick="journalIntent"
            android:src="@drawable/journal_bottom_nav" />

        <ImageView
            android:id="@+id/activities"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:clickable="true"
            android:onClick="activitiesIntent"
            android:paddingTop="4dp"
            android:src="@drawable/activities_bottom_nav" />

        <ImageView
            android:id="@+id/rewards"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:clickable="true"
            android:onClick="rewardsIntent"
            android:paddingTop="4dp"
            android:src="@drawable/rewards_bottom_nav" />

        <ImageView
            android:id="@+id/news"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:clickable="true"
            android:onClick="newsIntent"
            android:paddingTop="5dp"
            android:src="@drawable/news_bottom_nav" />

        <ImageView
            android:id="@+id/inbox"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="11dp"
            android:clickable="true"
            android:onClick="inboxIntent"
            android:src="@drawable/inbox_bottom_nav" />

    </LinearLayout>


</LinearLayout>