<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/send_message"
        android:textColor="@color/colorInboxBlue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:background="@color/colorInboxBlue" />

    <EditText
        android:id="@+id/recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/to_email_address"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/subject_line"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:lines="5"/>

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/send"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/journal"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="20dp"
            android:clickable="true"
            android:onClick="journalIntent"
            android:src="@drawable/journal_bottom_nav" />

        <ImageView
            android:id="@+id/activities"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:clickable="true"
            android:onClick="activitiesIntent"
            android:paddingTop="4dp"
            android:src="@drawable/activities_bottom_nav" />

        <ImageView
            android:id="@+id/rewards"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:clickable="true"
            android:onClick="rewardsIntent"
            android:paddingTop="4dp"
            android:src="@drawable/rewards_bottom_nav" />

        <ImageView
            android:id="@+id/news"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:clickable="true"
            android:onClick="newsIntent"
            android:paddingTop="5dp"
            android:src="@drawable/news_bottom_nav" />

        <ImageView
            android:id="@+id/inbox"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="11dp"
            android:clickable="true"
            android:onClick="inboxIntent"
            android:src="@drawable/inbox_bottom_nav" />

    </LinearLayout>


</LinearLayout>