<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/activities_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorActivitiesPurple"
            android:layout_gravity="center_horizontal"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorActivitiesPurple" />

        <ImageView
            android:id="@+id/waveform"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/waveform" />

        <SeekBar
            android:id="@+id/progress_seek_bar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="0:11" />

            <TextView
                android:id="@+id/time_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="220dp"
                android:text="1:49" />


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorActivitiesPurple" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="170dp"
            android:background="@drawable/ic_play_circle_outline_48px"
            android:onClick="playBtnClick" />



        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="80dp">

                <TextView
                    android:text="@string/warm_up"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="24sp"
                    android:textColor="@color/colorGrey" />

                <TextView
                    android:text="@string/five_min"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp"
                    android:textColor="@color/colorGrey" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="80dp">

                <TextView
                    android:text="@string/crawl"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="24sp"
                    android:textColor="@color/colorGrey" />

                <TextView
                    android:text="@string/one_min"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp"
                    android:textColor="@color/colorGrey" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="80dp">

                <TextView
                    android:text="@string/reach"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="24sp"
                    android:textColor="@color/colorGrey" />

                <TextView
                    android:text="@string/one_min"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp"
                    android:textColor="@color/colorGrey"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/journal"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="20dp"
            android:clickable="true"
            android:onClick="journalIntent"
            android:src="@drawable/journal_bottom_nav" />

        <ImageView
            android:id="@+id/activities"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:clickable="true"
            android:onClick="activitiesIntent"
            android:paddingTop="4dp"
            android:src="@drawable/activities_bottom_nav" />

        <ImageView
            android:id="@+id/rewards"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:clickable="true"
            android:onClick="rewardsIntent"
            android:paddingTop="4dp"
            android:src="@drawable/rewards_bottom_nav" />

        <ImageView
            android:id="@+id/news"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:clickable="true"
            android:onClick="newsIntent"
            android:paddingTop="5dp"
            android:src="@drawable/news_bottom_nav" />

        <ImageView
            android:id="@+id/inbox"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="11dp"
            android:clickable="true"
            android:onClick="inboxIntent"
            android:src="@drawable/inbox_bottom_nav" />

    </LinearLayout>




</LinearLayout>